// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests should render correctly 1`] = `
<div>
  <div
    class="pref-notifications--nav"
  >
    <div
      class="pf-v5-c-menu pf-m-plain pf-m-scrollable"
      data-ouia-component-id="OUIA-Generated-Menu-1"
      data-ouia-component-type="PF5/Menu"
      data-ouia-safe="true"
    >
      <div
        class="pf-v5-c-menu__search"
      >
        <div
          class="pf-v5-c-menu__search-input pf-u-mx-sm"
        >
          <div
            class="pf-v5-c-text-input-group"
            customicon="[object Object]"
            data-testid="search-input"
            type="search"
          >
            <div
              class="pf-v5-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v5-c-text-input-group__text"
              >
                <span
                  class="pf-v5-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                </span>
                <input
                  aria-label="Filter menu items"
                  class="pf-v5-c-text-input-group__text-input"
                  placeholder="Search services"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="pf-v5-c-divider"
      />
      <div
        class="pf-v5-c-menu__content"
        id="notifications-menu-content"
      >
        <section
          class="pf-v5-c-menu__group pf-u-px-sm"
        >
          <h1
            class="pf-v5-c-menu__group-title"
          >
            Red Hat Enterprise Linux
          </h1>
          <ul
            class="pf-v5-c-menu__list"
            role="menu"
          >
            <li
              class="pf-v5-c-menu__list-item"
              role="none"
            >
              <button
                class="pf-v5-c-menu__item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v5-c-menu__item-main"
                >
                  <span
                    class="pf-v5-c-menu__item-text"
                  >
                    Advisor
                  </span>
                </span>
              </button>
            </li>
            <li
              class="pf-v5-c-menu__list-item"
              role="none"
            >
              <button
                class="pf-v5-c-menu__item"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v5-c-menu__item-main"
                >
                  <span
                    class="pf-v5-c-menu__item-text"
                  >
                    Advisor2
                  </span>
                </span>
              </button>
            </li>
          </ul>
        </section>
      </div>
    </div>
  </div>
  <div
    class="pref-notifications--inputs"
  >
    <h3
      class="pf-v5-c-title pf-m-xl pf-u-pb-xs"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF5/Title"
      data-ouia-safe="true"
    >
      Advisor | RHEL
    </h3>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF5/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Configure your 
      Advisor
       notifications.
    </p>
    <div />
  </div>
</div>
`;

exports[`Tabs tests should render loading correctly 1`] = `
<div>
  <div
    class="pref-notifications--nav"
  >
    <div
      class="pf-v5-c-menu pf-m-plain pf-m-scrollable"
      data-ouia-component-id="OUIA-Generated-Menu-2"
      data-ouia-component-type="PF5/Menu"
      data-ouia-safe="true"
    >
      <div
        class="pf-v5-c-menu__search"
      >
        <div
          class="pf-v5-c-menu__search-input pf-u-mx-sm"
        >
          <div
            class="pf-v5-c-text-input-group"
            customicon="[object Object]"
            data-testid="search-input"
            type="search"
          >
            <div
              class="pf-v5-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v5-c-text-input-group__text"
              >
                <span
                  class="pf-v5-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                </span>
                <input
                  aria-label="Filter menu items"
                  class="pf-v5-c-text-input-group__text-input"
                  placeholder="Search services"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="pf-v5-c-divider"
      />
      <div
        class="pf-v5-c-menu__content"
        id="notifications-menu-content"
      >
        <div
          class="pf-v5-c-empty-state pf-m-sm pf-u-mt-lg"
        >
          <div
            class="pf-v5-c-empty-state__content"
          >
            <div
              class="pf-v5-c-empty-state__header"
            >
              <div
                class="pf-v5-c-empty-state__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </div>
              <div
                class="pf-v5-c-empty-state__title"
              >
                <h4
                  class="pf-v5-c-empty-state__title-text"
                >
                  No matching services found
                </h4>
              </div>
            </div>
            <div
              class="pf-v5-c-empty-state__body"
            >
              Adjust your filters and try again.
            </div>
            <div
              class="pf-v5-c-empty-state__footer"
            >
              <button
                aria-disabled="false"
                class="pf-v5-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="button"
              >
                Clear filters
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pref-notifications--inputs"
  >
    <h3
      class="pf-v5-c-title pf-m-xl pf-u-pb-xs"
      data-ouia-component-id="OUIA-Generated-Title-2"
      data-ouia-component-type="PF5/Title"
      data-ouia-safe="true"
    >
      undefined | undefined
    </h3>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF5/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Configure your 
       notifications.
    </p>
    <div />
  </div>
</div>
`;
